# ruff_demo_gulag_2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_normal.yml  ci_ruff.yml
src/: main.py
tests/: test_main.py
